fix zoom issue on ios

--- a/src/client/src/styles/index.scss
+++ b/src/client/src/styles/index.scss
@@ -27,6 +27,10 @@ footer {
   padding: 0 6px;
 }
 
+option {
+  font-size: 50px;
+}
+
 /* surveyjs-overrides */
 
 .sv_main {
